# PaperTrail

./: .gitignore  IMPROVEMENTS.md  LEGEND.md  README.md  TODO  article_prop_extraction.py  checksum.py  checksum_utils.py  common_utils.py  config.json  config.py  database_processor.py  encryption_utils.py  file_prop_extraction.py  file_utils.py  general_utilities.py  general_utils.py  gmail_archival_processor.py  id_gen.py  language_processor.py  metadata_processor.py  ocr_utils.py  paper-enhance.py  papertrail.py  papertrail_v2.py  password_utils.py  pipeline.py  pyproject.toml  scratchpad.txt  session_processor.py  setup.py  tesseract_config.py  tesseract_debug.py  test_ocr_deps.py  visual_processor.py
app_processors/: fireflyiii.py  immich.py
assets/: filetype_checking_test.txt
assets/ouch-x86_64-pc-windows-msvc/completions/: _ouch.ps1  ouch.bash  ouch.elv
assets/ouch-x86_64-pc-windows-msvc/man/: ouch-compress.1  ouch-decompress.1  ouch-list.1  ouch.1
batch_ocr_results/: ocr_results_2024 WORK PERMIT_20250827_161801.txt  ocr_results_Adobe Scan Aug 23, 2025 (1)_20250827_161737.txt  ocr_results_Adobe Scan Aug 23, 2025 (3)_20250827_164208.txt  ocr_results_Adobe Scan Aug 23, 2025 (5)_20250827_164243.txt
diagnostic_tools/: docx_file_inspector.py  file_type_detection.py  profile_detection.py
pipelines/: database_pipeline.py  duplication_pipeline.py  encryption_pipeline.py  identification_pipeline.py  metadata_pipeline.py  sanitizer_pipeline.py  semantics_pipeline.py  visual_pipeline.py
processors/: conversion_processor.py  database_processor.py  language_processor.py  linkwarden.py  metadata_processor.py  seafile.py  session_tracker.py  visual_processor.py
src/app_processors/: affine.py
src/applications/: identify_duplicates.py  manual_file_triage.py
src/diagnostic_tools/: doc_to_html.py  docx_file_inspector.py  ensure_gpu.py  file_type_detection.py  libre_office_install.py  ollama_html_converter.py  pdf_to_docx.py  tika_extractor.py
src/pipelines/: __init__.py  conversion_pipeline.py  database_pipeline.py  metadata_pipeline.py  sanitizer_pipeline.py  semantics_pipeline.py
src/processors/: __init__.py  archive_emails.py  data_extraction.py  database_pipeline.py  doc_language_translation.py  doc_scanning.py  doc_translation.py  encryption.py  file_conversion.py  manual_review.py  metadata_extraction.py  sanitization.py  scanning.py  semantics_extraction.py  semantics_pipeline.py  tabulation.py
src/stages/: archive_emails.py  auto_sort.py  file_conversion.py  folder_decompression.py  identify_duplicates.py  manual_file_triage.py  manual_review.py  metadata_extraction.py  process_triage_units.py  sanitize.py  semantics_extraction.py  sharing_gui.py
src/utilities/: __init__.py  ai_processing.py  artifact_data_manipulation.py  audio_model.py  automatic_sorting.py  checksum.py  common.py  compile_subsets.py  dependancy_ensurance.py  detect_filetype.py  doc_scanning.py  document_data_extraction.py  document_scanning.py  email_archival.py  email_archival_client.py  email_archival_tools.py  extract_metadata.py  extract_semantics.py  file_stability.py  format_converting.py  initial_review_gui.py  language_model.py  sanitization.py  semantics_extraction.py  visual_model.py  visual_processor.py
src/utilities/applications/: archive_review.py  identify_duplicates.py  manual_file_triage.py
utilities/: common_utils.py  profiling_utils.py  security_agent.py  session_tracking_utils.py  type_conversion.py  uuid_utils.py  visual_model.py
