[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "papertrail"
version = "1.4.0"
authors = [{ name = "Ashiq Arib Gazi", email = "ashiqarib@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # ── Deep Learning ────────────────────────────────────────────────
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.2.0",
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.0",
    "hf-xet>=1.1.0",
    # ── LLM Integration ──────────────────────────────────────────────
    "ollama>=0.6.1",
    # ── PDF & Document Processing ────────────────────────────────────
    "PyMuPDF>=1.27.1",
    "pypdf>=5.4.0",
    "pdf2image>=1.17.0",
    "img2pdf>=0.6.0",
    "ocrmypdf>=16.10.0",
    "python-docx>=1.1.2",
    "EbookLib>=0.18",
    "beautifulsoup4>=4.13.0",
    "reportlab>=4.4.10",
    "weasyprint>=63.1",
    # ── Image Processing ─────────────────────────────────────────────
    "opencv-python>=4.11.0",
    "rawpy>=0.23.0",
    "pillow-heif>=0.22.0",
    "imagehash>=4.3.2",
    # ── File Type Detection & Metadata ───────────────────────────────
    "filetype>=1.2.0",
    "pyexiftool>=0.5.6",
    "magika>=0.6.1",
    # ── Archive & Email Formats ──────────────────────────────────────
    "py7zr>=0.22.0",
    "rarfile>=4.2",
    "extract-msg>=0.52.0",
    "libpff-python>=20211114",
    # ── Encryption & Security ────────────────────────────────────────
    "cryptography>=44.0.0",
    "msoffcrypto-tool>=6.0.0",
    # ── Audio Processing ─────────────────────────────────────────────
    "librosa>=0.10.2",
    "faster-whisper>=1.1.0",
    # ── Video & Media ────────────────────────────────────────────────
    "ffmpeg-python>=0.2.0",
    "Wand>=0.6.13",
    # ── GUI ──────────────────────────────────────────────────────────
    "customtkinter>=5.2.2",
    "pygame>=2.6.1",
    "tkinterweb>=3.24.8",
    # ── Document Conversion ──────────────────────────────────────────
    "pypandoc>=1.15",
    # ── Data & Tabular ───────────────────────────────────────────────
    "pandas>=2.3.3",
    "tqdm>=4.67.0",
    # ── System Monitoring ────────────────────────────────────────────
    "GPUtil>=1.4.0",
    # ── Misc Utilities ───────────────────────────────────────────────
    "requests>=2.32.0",
    "preview-generator>=0.29",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/EncryptedVoid/PaperTrail"
Repository = "https://github.com/EncryptedVoid/PaperTrail"
Documentation = "https://github.com/EncryptedVoid/PaperTrail/blob/main/README.md"
Issues = "https://github.com/EncryptedVoid/PaperTrail/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["papertrail*", "processors*", "utilities*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.json", "*.yaml", "*.yml"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
